--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -26,6 +26,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "lodash.debounce": "^4.0.8",
+    "prop-types": "^15.6.2",
     "radium": "^0.25.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
