--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -29,7 +29,11 @@
     "prop-types": "^15.6.2",
     "radium": "^0.25.0",
     "react": "^16.5.2",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
+    "react-transition-group": "^2.5.0",
+    "redux": "^4.0.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
